<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EGPS</string>
    <string name="title_activity_maps">Map</string>
    <string name="ingresar">INGRESAR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="salir">SALIR</string>
    <string name="mi_ubicaci_n">Mi Ubicación</string>
    <string name="aqui_va_mi_ubicaci_n">Aqui va mi ubicación</string>
    <string name="ver_mapa">Ver Mapa</string>
    <string name="usuario">usuario</string>
    <string name="registrar">registrar</string>
    <string name="name">name</string>
    <string name="lastname">lastname</string>
    <string name="detener">detener</string>
    <string name="iniciar">INICIAR</string>
    <string name="guardar">guardar</string>
    <string name="ubicacion_final">ubicacion final</string>
    <string name="ubicacion_inicial">ubicacion inicial</string>
    <string name="genero">GENERO</string>
    <string name="edad">EDAD</string>
    <string name="apellido">APELLIDO</string>
    <string name="nombre">NOMBRE</string>

    <!-- errores -->

    <string name="error_campo_obligatorio">Campo Obligatorio</string>
    <string name="error_campo_numerico">Campo numérico</string>
    <string name="error_valor_mayor_a_6">Contraseña minimo de 6 digitos</string>
    <string name="error_valor_entre_0_y_99">Error edad entre 0 y 99 años</string>
    <string name="contrasenas_no_coinciden">Contraseñas no coinciden</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="todo">TODO</string>
    <string name="mis_rutas">MIS RUTAS</string>
    <string name="textview1">textview1</string>
    <string name="textview2">textview2</string>
    <string name="mostrar_rutas">Mostrar rutas</string>


</resources>
