<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gps"
    tools:context="com.example.jhonfregom.egps.GPSActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:cursorVisible="false"
            android:text="@string/salir" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <Button
            android:id="@+id/detener"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="84dp"
            android:background="@color/colorPrimaryDark"
            android:text="DETENER" />

        <Button
            android:id="@+id/inicio"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="85dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClick"
            android:text="@string/iniciar"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:textSize="14sp"
            android:visibility="visible" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtubicacion2"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:hint="@string/ubicacion_inicial"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/txtubicacion3"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:hint="@string/ubicacion_final"
        android:textAlignment="center"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <Button
            android:id="@+id/guardar"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnRutas"
            android:layout_width="190dp"
            android:layout_height="31dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/mostrar_rutas" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi_ubicaci_n"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aqui_va_mi_ubicaci_n"
        android:textAlignment="center" />

    <Button
        android:id="@+id/verMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ver_mapa" />


</LinearLayout>
